# quizbee

./: .dockerignore  .env.example  .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  compose.yml  deploy-coolify.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm-workspace.yml  pyproject.toml  pyrightconfig.json
.changeset/: config.json
apps/api/: Dockerfile  Dockerfile.local  Dockerfile.worker  Makefile  compose.prod.worker.yml  compose.prod.yml  gunicorn.conf.py  pyproject.toml
apps/api/src/apps/auth/: middleware.py
apps/api/src/apps/billing/: middleware.py  router.py
apps/api/src/apps/billing/utils/: __init__.py
apps/api/src/apps/document_parser/domain/: __init__.py  _in.py  models.py
apps/api/src/apps/edge_api/: di.py
apps/api/src/apps/edge_api/app/: attempt_usecases.py  contracts.py  material_usecases.py  quiz_usecases.py  usecases.py
apps/api/src/apps/edge_api/domain/: _in.py  errors.py
apps/api/src/apps/llm_tools/: di.py
apps/api/src/apps/llm_tools/app/: usecases.py
apps/api/src/apps/llm_tools/domain/: out.py
apps/api/src/apps/material/: di.py
apps/api/src/apps/material/app/: contracts.py
apps/api/src/apps/material/domain/: models.py
apps/api/src/apps/material_owner/: di.py
apps/api/src/apps/material_owner/app/: contracts.py  usecases.py
apps/api/src/apps/material_owner/domain/: _in.py  out.py
apps/api/src/apps/material_search/: di.py
apps/api/src/apps/materials/: __init__.py  important_sentences.py  middleware.py  router.py  tokens_calculation.py  utils.py
apps/api/src/apps/message_owner/: di.py
apps/api/src/apps/messages/: __init__.py  ai.py  router.py
apps/api/src/apps/quiz_attempter/: di.py
apps/api/src/apps/quiz_attempts/: __init__.py  router.py
apps/api/src/apps/quiz_generator/: di.py
apps/api/src/apps/quiz_owner/: di.py
apps/api/src/apps/quizes/: __init__.py  router.py
apps/api/src/apps/user_auth/: di.py
apps/api/src/apps/user_owner/: di.py
apps/api/src/bootstrap/: __init__.py  app.py  cors.py  deps.py  di.py  errors.py  health_routes.py  lifespan.py  mcp.py  worker.py
apps/api/src/lib/: di.py  health.py  settings.py  stripe.py
apps/api/src/lib/ai/: __init__.py  build_pre_prompt.py  orchestrator.py
apps/api/src/lib/clients/: __init__.py  http.py  langfuse.py  meili.py  meilisearch.py  pb.py  stripe.py  tiktoken.py
apps/api/src/lib/config/: billing.py  llms.py  logging.py
apps/api/src/lib/models/: __init__.py
apps/api/src/lib/utils/: __init__.py  cache_key.py  case_conversion.py  extract_pr.py  update_span_with_result.py
apps/api/src/srv_template/domain/: models.py
scripts/python/: Makefile  gen_prod_locks.py  pyproject.toml
scripts/python/gen_blog/: .gitignore  Makefile  README.md  USAGE.md  __init__.py  __main__.py  agent.py  cli.py  commands.py  main.py  models.py  utils.py
scripts/python/gen_blog/blogger/: agent.py  models.py  storage.py  uploader.py
scripts/python/gen_blog/bootstrap/: cli.py  commands.py  menu.py  utils.py
scripts/python/gen_blog/config/: langfuse.py
scripts/python/gen_blog/raw/: accessible-inclusive-quiz-design.json  active-learning-icap.json  adaptive-quizzes-irt-basics.json  ai-detection-assessment.json  ar-vr-education-evidence.json  authentic-assessment-genai.json  beat-procrastination-commitments.json  blooms-taxonomy-question-alignment.json  cognitive-load-classroom.json  constructed-response-autograding.json  digital-credentials-ob3-clr2-vc.json  digital-minimalism-students.json  dual-coding-vs-learning-styles.json  ethical-ai-use-students.json  eu-ai-act-gdpr-edtech.json  evidence-based-study-strategies.json  example-ai-education.json  example-feature-announcement.json  example-how-to.json  example-quiz-tips.json  example-with-refs.json  feynman-technique-explained.json  formative-feedback.json  genai-efficacy-education.json  growth-mindset-nuance.json  habit-formation-science.json  how-to-read-papers.json  interoperability-learning-analytics.json  item-analysis-101.json  math-images-code-in-quizzes.json  mcq-writing-best-practices.json  metacognition-srl.json  note-taking-deep-processing.json  oer-textbook-affordability.json  personal-learning-os.json  privacy-first-learning-analytics.json  quiz-security-integrity.json  retrieval-practice-science.json  skills-first-microcredentials.json  sleep-and-learning.json  (+5 more)
srvs/api/: Dockerfile  Dockerfile.local  compose.prod.worker.yml  compose.prod.yml  gunicorn.conf.py  pyproject.toml
srvs/api/src/apps/document_parser/: di.py
srvs/api/src/apps/edge_api/: di.py
srvs/api/src/apps/llm_tools/: di.py
srvs/api/src/apps/material_owner/: di.py
srvs/api/src/apps/quiz_attempter/: di.py
srvs/api/src/apps/quiz_owner/: di.py
srvs/api/src/bootstrap/: app.py  cors.py  deps.py  errors.py  lifespan.py  middleware.py  worker.py
srvs/api/src/lib/: di.py  distributed_lock.py  pb_admin.py  settings.py
srvs/api/src/lib/ai/: __init__.py  agent.py  models.py  trimmer.py
srvs/api/src/lib/config/: __init__.py  llms.py
srvs/api/src/lib/utils/: nanoid.py  sse.py  update_span_with_result.py
(+984 files in other folders)
